--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=KietPA;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    //"DefaultConnection": "Server=KHANHLINH;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+
+  }
 }
