Add logging filters, middleware, and update configurations
- Added `LogFilter` to `CourseController` for exception handling.
- Introduced `LogFilter` and `TestFilter` classes for logging.
- Registered filters and middleware in `Program.cs` (e.g., `LogMiddleware`, `RateLimitMiddleware`).
- Updated logging to use Serilog with a new file path and rolling interval.
- Modified `appsettings.json` to use a new database server and improved formatting.
- Enhanced global logging and middleware setup for better maintainability.

--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -1,14 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=KietPA;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+        "DefaultConnection": "Server=KHANHLINH;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=KietPA;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
-    //"DefaultConnection": "Server=KHANHLINH;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
-
-  }
 }
