Add action filters and improve caching in the API
This commit introduces several action filters (`AuditFilter`, `CacheFilter`, and `LogFilter`) to enhance logging, caching, and auditing functionalities in the `StudentManagementSystem` application. The `LogFilter` now utilizes dependency injection for improved logging.

The `CacheFilter` manages caching behavior through an `ICacheService` interface, while new models (`CourseCreateModel`, `CourseUpdateModel`, and `CourseViewModel`) allow nullable `CourseName` properties for better data handling.

A `CacheData` class was added to encapsulate cached data with expiration, and a `CacheService` was implemented for cache management. The `CourseController` was updated to utilize these new filters and improve HTTP response handling.

Additionally, the `Program.cs` file was modified to register new services and middleware, and the `appsettings.json` file was updated to change the database connection string. Logging configuration enhancements ensure logs are written to a specified directory, and error handling improvements address dependency injection issues in the `LogFilter`.

--- a/StudentManagementSystem/appsettings.json
+++ b/StudentManagementSystem/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        //"DefaultConnection": "Server=KietPA;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
-        "DefaultConnection": "Server=KHANHLINH;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+        "DefaultConnection": "Server=KietPA;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+        //"DefaultConnection": "Server=KHANHLINH;Database=StudentManagementSystem;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
     }
 }
