Update project files for private references and content
Added `<Private>True</Private>` to project references in
`Application.csproj`, `Infrastructures.csproj`, and
`Web.csproj` to restrict exposure. Also included a new
`<Content>` entry in `Web.csproj` to ensure
`appsettings.json` is copied to the output directory.

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,8 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infrastructures\Infrastructures.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\Infrastructures\Infrastructures.csproj">
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
