--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ echo ".vs/" >> .gitignore
 echo "bin/" >> .gitignore
 echo "obj/" >> .gitignore
 /Web/appsettings.json
+/Infrastuctures/Migrations/
