--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj">
-      <Private>True</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructures\Infrastructures.csproj">
       <Private>True</Private>
     </ProjectReference>
